--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,9 +2,9 @@ project(neat_runner_implementation)
 
 cmake_minimum_required(VERSION 3.16)
 
-set (SOURCES main.cc 
-    openclsetup.cc
-    model.cc
+set (SOURCES main.c 
+    openclsetup.c
+    model.c
 )
 
 add_executable(neat_runner_ai_exe ${SOURCES})
